# trees-of-insanity

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTEXT.md  README.md  electrobun.config.ts  justfile  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
cmake/: embed_binary.cmake
desktop/: CONTEXT.md
desktop/docs/: PRD.md  architecture.md
desktop/docs/adr/: 0001-qt-composited-window.md  0002-app-created-vulkan-device.md  0003-native-precomposition-sync.md  0004-webchannel-adapter.md  0005-desktop-session-state.md  0006-fresh-project-schema.md  0007-obj-import-adapter.md  0008-render-chain-projection.md  0009-depth-aware-guides.md  0010-atomic-plant-steps.md  0011-decouple-simulation-and-rendering.md  0012-hybrid-plant-diagnostic-rendering.md  0013-preserve-plant-camera-across-steps.md  0014-render-flow-as-a-vulkan-surface-material.md  0014-render-module-diagnostics-as-a-surface-tint.md
desktop/src/graphics/ovrtx/include/toi/ovrtx/: cuda_resources.hpp  environment.hpp  error.hpp  handles.hpp  output_mapping.hpp
desktop/src/graphics/ovrtx/src/: cuda_resources.cpp  handles.cpp
desktop/src/graphics/render/include/toi/render/: render_projection.hpp  viewport_guides.hpp
desktop/src/graphics/render/src/: orbit_view.cpp  render_projection.cpp  viewport_guides.cpp
desktop/src/graphics/viewport/include/toi/viewport/: cuda_vulkan_interop.hpp  error.hpp  preview_renderer.hpp  viewport_overlay.hpp  vulkan_context.hpp
desktop/src/graphics/viewport/shaders/: overlay_lines.frag  overlay_lines.vert  overlay_spheres.frag  overlay_spheres.vert  overlay_surfaces.frag  overlay_surfaces.vert
desktop/src/graphics/viewport/src/: cuda_vulkan_interop.cpp  error.cpp  gpu_checks.cpp  gpu_checks.hpp  preview_renderer.cpp  viewport_overlay.cpp  vulkan_context.cpp
desktop/src/model/import/include/toi/import/: obj_importer.hpp
desktop/src/model/import/src/: obj_importer.cpp
desktop/src/model/project/include/toi/project/: project.hpp
desktop/src/model/project/src/: project.cpp
desktop/src/model/session/include/toi/model/: desktop_session.hpp
desktop/src/model/session/src/: desktop_session.cpp
desktop/src/shell/: desktop_actions.cpp  desktop_actions.hpp  desktop_bridge.cpp  desktop_bridge.hpp  main.cpp  main.qml  viewport_texture_item.cpp  viewport_texture_item.hpp  vulkan_device.cpp  vulkan_device.hpp
desktop/tests/graphics/: ovrtx_smoke_tests.cpp  render_projection_tests.cpp
desktop/tests/model/: imported_growth_tests.cpp  model_smoke_tests.cpp  plant_session_tests.cpp
desktop/tests/shell/: desktop_actions_tests.cpp
desktop/ui/: tsconfig.json  vite.config.ts
desktop/ui/src/: App.tsx  appClient.ts  index.css  index.html  main.tsx  shell.ts  types.ts  uiOptions.ts
desktop/ui/src/components/: PlantDiagnosticLabels.tsx  PlantPanel.tsx  PlantTypesDialog.tsx  PrototypeTree.tsx  ResizeHandle.tsx  TopBar.tsx  Viewport.tsx  ViewportControls.tsx  panelPrimitives.tsx
desktop/ui/src/components/ui/: button.tsx  popover.tsx  select.tsx  slider.tsx  switch.tsx
desktop/ui/src/shared/: desktopActions.ts  desktopBridge.ts
docs/: architecture.md  implementation-plan.md  ovrtx-render-completion-sync.md  plant-growth-milestones.md  plant-milestone-todo.md  qt-desktop-monorepo-implementation-plan.md  single-plant-growth-model.md
docs/adr/: 0001-electrobun-shell-with-native-viewport.md  0001-monorepo-product-boundaries.md  0002-native-application-command-module.md  0003-local-project-file-with-fresh-schema.md  0004-obj-is-prototype-import-source.md  0005-z-up-application-coordinates.md  0006-provisional-node-physiological-age.md  0007-separate-growth-model-from-render-projection.md  0008-growth-preview-uses-render-chain-meshes.md  0009-solidcn-ui-component-system.md  0010-depth-aware-growth-preview-guides.md  0011-double-buffered-growth-preview-pipeline.md  0012-single-plant-self-collision-light.md  0013-morphospace-prototype-grid.md  0014-plant-scale-simulation-provisional-choices.md
docs/agents/: domain.md
docs/plans/: milestone-5-repeated-attachment.md
docs/research/: milestone-5b-shedding-paper-alignment.md  minimum-module-vigor-sweep.md  whole-plant-flow-and-pipe-order.md
native/: README.md
native/include/toi/native/: native_core.h
native/src/: native_core.cpp
scripts/: agent  verify-shell.ts
src/bun/: index.ts  nativeCore.ts
src/mainview/: App.tsx  appClient.ts  electrobun.d.ts  index.css  index.html  shell.ts  types.ts  uiOptions.ts
src/mainview/components/: PlantTypesDialog.tsx  TopBar.tsx  Viewport.tsx  ViewportControls.tsx  panelPrimitives.tsx
src/mainview/components/ui/: dialog.tsx
src/shared/: appCommands.ts  shellRpc.ts
src/toi/app/include/toi/app/: application_commands.hpp  application_controller.hpp
src/toi/app/src/: application_commands.cpp  application_controller.cpp
src/toi/growth/include/toi/growth/: growth.hpp
src/toi/import/include/toi/import/: obj_importer.hpp
src/toi/import/src/: obj_importer.cpp
src/toi/ovrtx/include/toi/ovrtx/: output_mapping.hpp  renderer_session.hpp
src/toi/ovrtx/src/: cuda_resources.cpp  environment.cpp  error.cpp  output_mapping.cpp  renderer_session.cpp
src/toi/plant/include/toi/plant/: plant.hpp
src/toi/plant/src/: plant.cpp
src/toi/project/include/toi/project/: project.hpp
src/toi/render/include/toi/render/: orbit_view.hpp  render_projection.hpp
src/toi/render/src/: render_projection.cpp
src/toi/viewport/include/toi/viewport/: cuda_vulkan_interop.hpp  native_surface.hpp  viewport_overlay.hpp  viewport_session.hpp  vulkan_context.hpp  vulkan_presenter.hpp  vulkan_swapchain.hpp  x11_vulkan_surface.hpp
src/toi/viewport/shaders/: overlay_lines.frag  overlay_lines.vert
src/toi/viewport/src/: cuda_vulkan_interop.cpp  viewport_overlay.cpp  viewport_session.cpp  vulkan_context.cpp  vulkan_presenter.cpp  vulkan_swapchain.cpp  x11_native_surface.cpp  x11_vulkan_surface.cpp
tests/: core_smoke_tests.cpp  nativeCore.test.ts  ovrtx_smoke_tests.cpp  plant_controller_tests.cpp  plant_render_tests.cpp  plant_tests.cpp
tools/agent/: Makefile  toi_input.c
